# bookcast

./: .dockerignore  .env.org  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  config.py  main.py  pdf_chapter_splitter.py  proofreading.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
backend/: .env.org  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
backend/.claude/: settings.local.json
backend/script/: post.py
backend/scripts/: generate_opening_tts.py  post.py
backend/src/bookcast/: __init__.py  config.py  dependencies.py  main.py  path_resolver.py
backend/src/bookcast/entities/: __init__.py  chapter.py  project.py  worker.py
backend/src/bookcast/infrastructure/: gcs.py
backend/src/bookcast/internal/: worker.py
backend/src/bookcast/repositories/: __init__.py  chapter_repository.py  project_repository.py
backend/src/bookcast/routers/: chapter.py  project.py
backend/src/bookcast/services/: audio.py  audio_service.py  chapter.py  chapter_search_service.py  chapter_service.py  db.py  file.py  file_service.py  ocr.py  ocr_service.py  project.py  project_service.py  script_writing.py  script_writing_service.py  text_to_speach_service.py  tts.py
backend/supabase/: .gitignore  config.toml
backend/supabase/migrations/: 20250727060511_add_project.sql  20250729060751_add_chapter_to_status.sql  20250801062706_add_chapter_to_script_file_count.sql  20250801142138_add_chapter_extracted_text_to_default.sql  20250823113710_rm_max_project_number_from_project.sql
backend/supabase/migrations/20250731031301_supabase/migrations/: 20250729060751_add_project_to_status_and_updated_at.sql.sql
backend/tests/: conftest.py
backend/tests/internal/: test_worker.py
backend/tests/repositories/: test_chapter_repository.py  test_project_repository.py
backend/tests/routers/: test_chapter.py  test_project.py
backend/tests/services/: test_audio.py  test_chapter_search_service.py  test_chapter_service.py  test_ocr.py  test_project_service.py  test_script_writing.py  test_tts.py
bookcast/: file_paths.py  models.py  ocr.py  page.py  path_resolver.py  pdf_to_image.py  proofreading.py  script_writing.py  session_state.py  voice_option.py
bookcast/pages/: podcast.py  podcast_script.py  podcast_setting.py  project.py  select_chapter.py
experiment/: README.md  agent_models.py  audio.py  main.py  ocr.py  quality_evaluator_agent.py  run_test.sh  script_agent_orchestrator.py  script_generator_agent.py  script_integrator_agent.py  script_writing.py  simple_test.py  topic_extractor_agent.py  tts.py
frontend/: .env.org  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
frontend/src/: view_models.py
frontend/src/bookcast/: config.py  page.py  session_state.py  view_models.py
frontend/src/bookcast/pages/: podcast.py  project.py  select_chapter.py
frontend/src/bookcast/services/: image_file.py
frontend/src/pages/: project.py
scripts/: download_sample_tts.py
src/bookcast/: __init__.py  config.py  dependencies.py  entities.py  logging.yml  main.py  models.py  ocr.py  page.py  path_resolver.py  pdf_to_image.py  script_writing.py  session_state.py  voice_option.py
src/bookcast/entities/: __init__.py  chapter.py  project.py  worker.py
src/bookcast/infrastructure/: gcs.py
src/bookcast/internal/: worker.py
src/bookcast/pages/: podcast.py  podcast_script.py  podcast_setting.py  project.py  select_chapter.py
src/bookcast/repositories/: chapter_repository.py  project_repository.py
src/bookcast/routers/: chapter.py  project.py
src/bookcast/services/: __init__.py  audio.py  base.py  chapter.py  db.py  file.py  ocr.py  pdf_processing.py  podcast.py  project.py  script_writing.py  service_manager.py  session.py  tts.py
src/frontend/: page.py
supabase/: .gitignore
supabase/migrations/: 20250727064709_add_chapter.sql  20250731030852_add_project_to_status_and_updated_at.sql  20250731033237_add_chapter_to_updated_at.sql  20250801023406_add_chapter_to_script.sql
supabase/migrations/20250727060749_supabase/migrations/: 20250727060511_add_project.sql.sql
tests/: README.md  conftest.py  test_podcast_pages.py  test_project_integration.py  test_select_chapter.py  test_services.py
tests/internal/: test_worker.py
tests/repositories/: test_chapter_repository.py  test_project_repository.py
tests/routers/: test_chapter.py  test_project.py
tests/services/: test_audio.py  test_chapter_service.py  test_ocr.py  test_ocr_agent.py  test_project_service.py  test_script_writing.py  test_tts.py
(+1 files in other folders)
