[project]
name = "bookcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.20.0",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "bookcast",
    "ipython>=9.3.0",
    "ruff>=0.11.13",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
jisui = { workspace = true }
bookcast = { workspace = true }

[tool.ruff]
lint.select = [
    "C9",
    "E",
    "F",
    "W",
    "I",
]
