[project]
name = "bookcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.20.0",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]

[tool.uv]
package = true
dev-dependencies = [
    "freezegun>=1.5.2",
    "ipython>=9.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
bookcast = { workspace = true }

[tool.ruff]
lint.select = [
    "C9",
    "E",
    "F",
    "W",
    "I",
]
