[project]
name = "bookcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "google-cloud-storage>=3.2.0",
    "google-cloud-tasks>=2.16.0",
    "google-genai>=1.20.0",
    "hypercorn>=0.17.3",
    "langchain>=1.0.3",
    "langchain-google-genai>=2.1.6",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters==1.0.0",
    "langgraph>=0.5.1",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "supabase>=2.17.0",
    "tenacity>=8.0.0",
    "tiktoken>=0.10.0",
]

[tool.uv]
package = true
dev-dependencies = [
    "click>=8.2.1",
    "freezegun>=1.5.2",
    "ipython>=9.3.0",
    "matplotlib>=3.10.3",
    "langsmith>=0.4.4",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
bookcast = { workspace = true }

[tool.ruff]
lint.select = [
    "C9",
    "E",
    "F",
    "W",
    "I",
]
include = ["*.py"]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
]
testpaths = ["tests/"]
asyncio_mode = "auto"
