[project]
name = "bookcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.3.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "streamlit>=1.48.0",
]

[tool.uv]
package = true

[tool.uv.sources]
bookcast = { workspace = true }

[tool.ruff]
lint.select = [
    "C9",
    "E",
    "F",
    "W",
    "I",
]
include = ["*.py"]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
]
testpaths = ["tests/"]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "watchdog>=6.0.0",
]
